# macagentic

./: .gitignore  Makefile  NOTICE  README.md  conftest.py  control.py  main.py  pyproject.toml
config/: config.toml
macagentic/: __init__.py  __main__.py  config.py  main.py
macagentic/agent/: __init__.py  control.py  environment.py  transcript.py  usage.py
macagentic/agent/prompts/: default.md
macagentic/ui/: __init__.py  core.py  markdown.py  screenshot.py  screenshot_cli.py  testing.py
scripts/: manage_tools.py
specs/: README.md  config.md  overview.md  ui.md  usage.md
tasks/: example.md
tests/: test_config.py  test_control.py  test_environment.py  test_manage_tools.py  test_markdown.py  test_transcript.py  test_ui.py  test_usage.py
tools/things/: PROMPT.md  main.py  things
tools/things/tests/: test_things.py
tools/ui/: PROMPT.md  main.py  ui
tools/ui/tests/: test_ui_tool.py  test_vision_pipeline.py
